@@ -560,6 +560,7 @@ function protocol.make_client_capabilities()
           valueSet = get_value_set(constants.DiagnosticTag),
         },
         dataSupport = true,
+        versionSupport = true,
       },
       callHierarchy = {
         dynamicRegistration = false,
